--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,3 @@
 @import './base/settings';
 @import './base/base';
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap');
